[package]
name = "house_finder"
version = "1.0.0"
authors = ["Santeri Hetekivi"]
edition = "2021"
rust-version = "1.84.1"
description = "Finds a house to buy"
readme = "README.md"
repository = "https://github.com/SanteriHetekivi/house_finder/"
license = "Apache-2.0"
keywords = ["house", "finland", "personal", "bot", "house", "telegram"]
categories = ["command-line-utilities"]

[dependencies.openssl]
version="0.10.68"
features = ["vendored"]

[dependencies.tokio]
version="1.42.0"
features = ["full"]

[dependencies.serde]
version="1.0.216"
features = ["serde_derive"]

[dependencies.serde_json]
version="1.0.133"

[dependencies.reqwest]
version="0.12.12"
features=["json", "cookies"]

[dependencies.chrono]
version="0.4.39"
features=["serde"]

[dependencies.clap]
version="4.5.23"
features=["derive"]

[dependencies.log]
version="0.4.22"

[dependencies.pretty_env_logger]
version="0.5.0"

[dependencies.teloxide]
version="0.13.0"
features=["macros"]

[dependencies.scraper]
version="0.22.0"

[dependencies.rand]
version="0.9.0"

[dependencies.longitude]
version="0.2.1"

[dependencies.sha2]
version="0.10.8"

[dependencies.regex]
version="1.11.1"
