[package]
name = "house_finder"
version = "1.0.0"
authors = ["Santeri Hetekivi"]
edition = "2021"
rust-version = "1.84.1"
description = "Finds a house to buy"
readme = "README.md"
repository = "https://github.com/SanteriHetekivi/house_finder/"
license = "Apache-2.0"
keywords = ["house", "finland", "personal", "bot", "house", "telegram"]
categories = ["command-line-utilities"]

[profile.dev]
lto = false
debug = true
overflow-checks = true

[profile.release]
lto = true
debug = false
overflow-checks = true

[dependencies.openssl]
version="0.10.68"
features = ["vendored"]

[dependencies.tokio]
version="1.42.0"
features = ["full"]

[dependencies.serde]
version="1.0.216"
features = ["serde_derive"]

[dependencies.serde_json]
version="1.0.133"

[dependencies.reqwest]
version="0.12.12"
features=["json", "cookies"]

[dependencies.clap]
version="4.5.23"
features=["derive"]

[dependencies.teloxide]
version="0.13.0"
features=["macros"]

[dependencies.longitude]
version="0.2.1"

[dependencies.sha2]
version="0.10.8"

[dependencies.regex]
version="1.11.1"
